refactor: Fix java:S4684 security vulnerabilities using DTOs